--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,17 @@
   "manifest_version": 3,
   "name": "Toggle JavaScript",
   "version": "1.0",
-  "description": "Toggle JavaScript enable/disable for the current site to help debug SSR/client component mixing.",
+  "description": "Toggle JavaScript enable/disable for the current site.",
   "permissions": ["contentSettings", "tabs"],
   "background": {
     "service_worker": "background.js"
+  },
+  "action": {
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png"
+    },
+    "default_title": "Toggle JavaScript"
   },
   "commands": {
     "toggle-javascript": {
